# Evolutionary-Robotics

./: .gitignore  README.md  TestScript.py  environment.yml  final_project_test.py  final_project_train.py  map_elites_body_search_4d.py  pyproject.toml  requirements.txt  run.sh
doc/: challenge1.md  challenge2.md  challenge3.md  final.md  installation.md  introduction0.md
evorob/algorithms/: base_ea.py  ea_api.py  es.py  ga.py  nsga.py
evorob/utils/: filesys.py  geometry.py  logging.py
evorob/world/: __init__.py  ant_multi_world.py  ant_world.py  base.py  eval_world.py
evorob/world/envs/: ant_flat.py  ant_hill.py  eval.py  eval_flat.py  eval_flat2.py  eval_hill.py  eval_hill2.py  eval_ice.py  eval_ice2.py  passive_walker.py
evorob/world/envs/assets/: ant_flat_terrain.xml  ant_ice_terrain.xml
evorob/world/robot/assets/: default_world.xml  eval_terrain.xml  flat_world.xml  hill_world.xml  ice_world.xml  walker_world.xml
evorob/world/robot/controllers/: base.py  mlp.py  mlp_hebbian.py  sinoid.py  so2.py
evorob/world/robot/morphology/: ant_custom_robot.py  passive_walker_robot.py
